fix: use brand color for outlines and fix sidebar outline collapse issue

--- a/apps/docs/src/styles/globals.css
+++ b/apps/docs/src/styles/globals.css
@@ -4,6 +4,11 @@
 
 * {
   font-family: "Atkinson Hyperlegible";
+  border-radius: 4px;
+}
+
+*:focus {
+  outline: solid 2px #257ddd !important;
 }
 
 pre *,
